# rabbit-forum

./: .env  Dockerfile  compose.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
forum/: admin.py  models.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_remove_post_customer_post_user_delete_customer.py  0003_remove_topic_min_age.py
rabbit_forum/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: base.css  login.css  navbar.css  register.css
templates/: base.html  index.html  login.html  register.html  search.html
templates/components/: navbar.html
