[project]
name = "rabbit-forum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["daphne==4.2.1", "django==5.2.9", "psycopg[binary,pool]==3.3.0"]

[tool.mypy]
plugins = "mypy_django_plugin.main"
strict = true
disable_error_code = ["var-annotated"]
mypy_path = "."


[tool.django-stubs]
django_settings_module = "quick_paw.settings"

[dependency-groups]
dev = ["django-extensions==4.1", "ipython==9.6.0"]
lint = ["ruff==0.14.2", "mypy==1.18.2", "django-stubs[compatible-mypy]==5.2.7"]
